remove update_u, since its not necessary  1 server

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -20,20 +20,19 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug benches",
+            "name": "Debug benchmark 'updates'",
             "cargo": {
                 "args": [
-                    "bench"
+                    "test",
+                    "--no-run",
+                    "--bench=updates",
                 ],
                 "filter": {
-                    "name": "allosaur",
-                    "kind": "bin"
+                    "name": "updates",
+                    "kind": "bench"
                 }
             },
-            "args": [
-                // "user_arg1",
-                // "user_arg2"
-            ],
+            "args": [],
             "cwd": "${workspaceFolder}"
         }
     ]
